# ClothSimulator

./: CMakeLists.txt  Makefile  cloth  main.cpp
buildCloth/: CMakeCache.txt  CTestTestfile.cmake  Cloth  Makefile  cmake_install.cmake  imgui.ini
buildCloth/imgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake  testgui
imgui/: CMakeLists.txt  guitest.cpp
imgui/include/: imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_internal.h  vgMath.h
imgui/src/: imgui_impl_glfw.cpp
include/: Air.h  Camera.h  Cloth.h  Floor.h  Particle.h  Spring.h  Triangle.h  Window.h  core.h  main.h
shaders/: shader.frag
src/: Camera.cpp  Cloth.cpp  Particle.cpp  Shader.cpp  Spring.cpp  Triangle.cpp  Window.cpp  main.cpp
